added randomness logic

--- a/colorGame.html
+++ b/colorGame.html
@@ -5,7 +5,23 @@
 	<link rel="stylesheet" type="text/css" href="colorGame.css">
 </head>
 <body>
+	<h1>The Great <span id="colorDisplay">RGB</span> Color Game!</h1>
 
+	<div>
+		<button class="btn" id="newBtn">New Game</button>
+		<span id="message"></span>
+		<button class="btn" id="easyBtn">Easy</button>
+		<button class="btn" id="hardBtn">Hard</button>
+	</div>
+
+	<div id="container">
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+	</div>
 
 	<script type="text/javascript" src="colorGame.js"></script>
 </body>
